@@ -6,8 +6,8 @@ HOMEPAGE=http://www.open-iscsi.org/
 IUSE=debug slp
 KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2
-RDEPEND=slp? ( net-libs/openslp ) virtual/udev sys-apps/util-linux
+RDEPEND=slp? ( net-libs/openslp ) virtual/udev sys-fs/lsscsi sys-apps/util-linux
 SLOT=0
 SRC_URI=http://www.open-iscsi.org/bits/open-iscsi-2.0-872.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	linux-info	8cbc678e083c23e4ad546ca6509cf304	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=baa15458cd5ce2bb3f2262747b480579
+_md5_=3f35008c644b74dc40edc424ffbcff8c
